assert-struct/tests/snapshots/nested__deeply_nested_range_failure.snap
---
source: assert-struct/tests/nested.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/nested_errors/deeply_nested_range_failure.rs:41:28
   |
41 |                     rooms: 10..=20, // Should fail: 5 is not in range
   |                            ^^^^^^^ got 5
